--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1378149'>PaymentRequest: Fix a bug that payer infos isn't updated</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-12-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1379087'>Use base::size() instead of arraysize in content/browser/indexed_db/</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1377474'>Cleanup arraysize usage in //storage</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1340313'>Add early return to StringView match.</a></td><td>Gabor Rapcsanyi</td></tr>
