--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1400423'>Remove public/platform/modules/wake_lock/ directory</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1399694'>Remove public/platform/modules/presentation directory</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-01-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1394346'>Use Node&amp; instead of Node* as a parameter</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1378149'>PaymentRequest: Fix a bug that payer infos isn't updated</a></td><td>Jinho Bang</td></tr>
