--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1416794'>Expose the External interface</a></td><td>Amos Lim</td></tr>
 <tr><td>2019-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1411752'>Standardize initStorageEvent in StorageEvent</a></td><td>Amos Lim</td></tr>
 <tr><td>2019-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1399696'>Replace WebNotificationData::Direction with NotificationDirection</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1400423'>Remove public/platform/modules/wake_lock/ directory</a></td><td>Hwanseung Lee</td></tr>
