--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-02-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1395998'>cache storage: Introduce MultiCacheQueryOptions as per spec</a></td><td>Amos Lim</td></tr>
 <tr><td>2019-01-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1438981'>PaymentRequest: Remove regionCode attribute</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-01-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1415050'>PaymentRequest: Implement retry() in Android side</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1416794'>Expose the External interface</a></td><td>Amos Lim</td></tr>
