--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-02-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1474881'>Remove unneeded baseline file for video-played-ranges-1.html</a></td><td>Sriram</td></tr>
 <tr><td>2019-02-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1466163'>Fix font size calculation for TextTrackCues</a></td><td>Sriram</td></tr>
 <tr><td>2019-02-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1469183'>Replace erase(std::remove_if()) in chrome/</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2019-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1465606'>Replace erase(std::remove()) and erase(std::remove_if()) in content/</a></td><td>Zhuoyu Qian</td></tr>
