--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-02-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1475567'>Remove default padding for cue text rendering</a></td><td>Sriram</td></tr>
 <tr><td>2019-02-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1460594'>PaymentRequest: Make displayItems optional</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-02-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1470286'>Replace erase(std::remove()) and erase(std::remove_if()) in components/</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2019-02-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1474881'>Remove unneeded baseline file for video-played-ranges-1.html</a></td><td>Sriram</td></tr>
