--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-02-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1477612'>PaymentRequest: Make modifiers member optional</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-02-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1460594'>Reland "PaymentRequest: Make displayItems optional"</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-02-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1448009'>Remove experiment_lables and variations_experiment_util</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-02-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1475567'>Remove default padding for cue text rendering</a></td><td>Sriram</td></tr>
