--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-02-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1484966'>service worker: Remove Cookie handling from the test helper</a></td><td>Amos Lim</td></tr>
 <tr><td>2019-02-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1482274'>Rename "webkit" to "blink" in style check code.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2019-02-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1481184'>Replace "WebKit" with "Blink" in python style check code.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2019-02-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1466430'>Replace blink::PlatformNotificationData::Direction with blink::mojom::NotificationDirection</a></td><td>Amos Lim</td></tr>
