--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1485615'>service worker: Remove Background Fetch handling from the test helper</a></td><td>Amos Lim</td></tr>
 <tr><td>2019-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1493626'>service worker: Remove idle timer delay handling from the test helper</a></td><td>Amos Lim</td></tr>
 <tr><td>2019-02-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1491161'>service worker: Remove Fetch handling from the test helper</a></td><td>Amos Lim</td></tr>
 <tr><td>2019-02-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1484406'>service worker: Remove Payment handling from the test helper</a></td><td>Amos Lim</td></tr>
