--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-03-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1505352'>[LayoutNG] Add null check for return value of ContainingNGBlockFlow().</a></td><td>v.paturi</td></tr>
 <tr><td>2019-03-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1498805'>Apply testharness for copy-paste-ruby-text.html webtest.</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2019-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1477610'>PaymentRequest: Implement payerdetailchange event in Android</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1495154'>PaymentRequest: Fix a crash when payment sheet UI is skipped</a></td><td>Jinho Bang</td></tr>
