--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-03-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1510614'>Move UsedValueOfUserSelect() out of EditingUtilities.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2019-03-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1506918'>Remove unused class member 'is_stacked_'.</a></td><td>v.paturi</td></tr>
 <tr><td>2019-03-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1506921'>Change UpdateHoverReason to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2019-03-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1506917'>Remove TouchEventDispatchResultType.</a></td><td>Zhuoyu Qian</td></tr>
