--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-03-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1517412'>Convert enum to enum class for NonClientWindowFrameAction*</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-03-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1519507'>Put CSSAxisValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2019-03-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1519506'>Put CSSGridTemplateAreasValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2019-03-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1517053'>Put CSSUnicodeRangeValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
