--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-03-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1514437'>Add support for classification of image sprites in dark mode.</a></td><td>v.paturi</td></tr>
 <tr><td>2019-03-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1524751'>Put CSSURIValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2019-03-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1518260'>Put CSSGridLineNamesValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2019-03-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1518263'>Put CSSGridAutoRepeatValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
