--- a/up_for_grab.html
+++ b/up_for_grab.html
@@ -13,7 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2014-11-13</td><td>blink</td><td><a href='https://codereview.chromium.org/607513002'>Onerror return value handling in workers fixed as per HTML5 spec.</a></td><td><a href='https://codereview.chromium.org/user/Mayur Kankanwadi'>mayurk.vk</a></td><td>author</td></tr>
+<tr><td>2014-10-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/592043005'>[WIP]Implement Chromium side changes for navigator.language(s) support for workers.</a></td><td><a href='https://codereview.chromium.org/user/Mayur Kankanwadi'>mayurk.vk</a></td><td>author</td></tr>
 <tr><td>2014-10-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/609043002'>[src/chrome/common ]Apply automatic range checks to enum types across IPC .</a></td><td><a href='https://codereview.chromium.org/user/ARUNKK'>kulkarni.a</a></td><td>author</td></tr>
+<tr><td>2014-10-05</td><td>blink</td><td><a href='https://codereview.chromium.org/592183002'>[WIP]Implement Blink side changes for navigator.language(s) support for workers.</a></td><td><a href='https://codereview.chromium.org/user/Mayur Kankanwadi'>mayurk.vk</a></td><td>author</td></tr>
+<tr><td>2014-09-26</td><td>blink</td><td><a href='https://codereview.chromium.org/591413003'>Add a mechanism for users to opt-out of CSP &amp; XSS violations reports.</a></td><td><a href='https://codereview.chromium.org/user/Mayur Kankanwadi'>mayurk.vk</a></td><td>author</td></tr>
 <tr><td>2014-09-25</td><td>blink</td><td><a href='https://codereview.chromium.org/376893002'>On tap in editable node with some text complete text gets selected instead of showing insertion han&#8230;</a></td><td><a href='https://codereview.chromium.org/user/divya.bansal'>divya.bansal</a></td><td>author</td></tr>
 
 <script>
