--- a/commits.html
+++ b/commits.html
@@ -13,7 +13,63 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
-<tr><td>Hwanseung Lee</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1530508'>4 months ago</a></td><td>e75bb63c6973c3b24a4813cd155947887736f6c1</td></tr>
+<tr><td>2019-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1708659'>When a function named 'getTotalLength' is called with non-rendered, throw exception</a></td><td>hyunjune</td></tr>
+<tr><td>2019-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1628638'>Reland "Refactor dark mode image classifier."</a></td><td>v.paturi</td></tr>
+<tr><td>2019-07-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1717571'>Add UseCounter for 'toggle' event handler execution</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2019-07-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1713546'>Convert enum to enum class for SourceState</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-07-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1714114'>Removing redundant call to SetBaseBackgroundColor()</a></td><td>Yuvanesh Natarajan</td></tr>
+<tr><td>2019-07-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1708068'>Convert enum to enum class for MenuDelegate::DropPosition</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1708213'>Canvas2D: Early return if transform matrix has Infinity or NaN</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1628638'>Refactor dark mode image classifier.</a></td><td>v.paturi</td></tr>
+<tr><td>2019-06-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1635075'>PaymentRequest: Move error message view into body</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-06-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1614649'>Convert enum to enum class for BoxLayout::Orientation</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1637028'>cc: Calculate tile size only when needed.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2019-06-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1654730'>PaymentRequest: Error message should span the width of the dialog</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-06-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1652393'>PaymentRequest: Fix a bug that an email gets lost when saving an address</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-06-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1600922'>Make device::Gamepad's mapping member an enum</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-05-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1631811'>[Android] Hide SELECT popups on scroll start.</a></td><td>abhi.rathore</td></tr>
+<tr><td>2019-05-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1630131'>WebXR: Make public member variables in XRInputSource private</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-05-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1631165'>PaymentRequest: Enable retry() and payerdetailchange event by default</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-05-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1624012'>[Autofill] Remove unused function in autofill manager</a></td><td>DongJun Kim</td></tr>
+<tr><td>2019-05-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1619531'>PaymentHandler: Fix change-payment-method.https.html test</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-05-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1610258'>PaymentRequest: Fix a bug that retry errors are not consistently shown</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-05-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1611424'>Converting In-class Member Initialization for BoxLayout</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-05-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1605252'>Convert enum to enum class for BoxLayout::MainAxisAlignment</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-05-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1601612'>Reland "PaymentRequest: Use runOnUiThreadBlockingNoException"</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-05-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1605281'>Convert enum to enum class for BoxLayout::CrossAxisAlignment</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-05-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1604394'>Use Node&amp; instead of Node* as a parameter</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-05-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1601612'>PaymentRequest: Use runOnUiThreadBlockingNoException</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-05-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1599054'>Autofill: Use runOnUiThreadBlockingNoException</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-05-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1575307'>PaymentRequest: Implement error message for retry() on Android</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-05-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1597511'>Convert enum to enum class for FrameButton</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-05-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1589086'>Removed unneeded ime_text_span constructors</a></td><td>Uzair Jaleel</td></tr>
+<tr><td>2019-05-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1589680'>PaymentRequest: Fix an infinite spinning loop when selecting user infos</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-05-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1587578'>Convert enum to enum class for ImageViewBase::Alignment</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-05-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1592974'>[jumbo] fix the build fail when using jumbo</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-04-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1583031'>Remove EventType enum at root_view.cc</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-04-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1575048'>Add GamepadMappingType enum at gamepad.idl</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-04-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1579159'>PaymentRequest: Fix a bug that calling updateWith() aborts payment sheet</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-04-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1573315'>Remove CancelAll() function at menu_controller.h</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-04-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1569370'>Convert enum to enum class at MenuController</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-04-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1564276'>Split DarkModeImageClassifier for Bitmap and SVG images.</a></td><td>v.paturi</td></tr>
+<tr><td>2019-04-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1546736'>Convert enum to enum class for Tab::TabState</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-04-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1548877'>Convert enum to enum class for internal::Edit:Type</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-04-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1546748'>Remove BorderElements enum</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-04-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1551720'>Refactor DarkModeImageClassifier::ShouldApplyDarkModeFilterToImage().</a></td><td>v.paturi</td></tr>
+<tr><td>2019-04-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1547475'>PaymentRequest: Set [[waitForUpdate]] to true on payerdetailchange event</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-04-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1545725'>Apply dark mode filter to SVG images.</a></td><td>v.paturi</td></tr>
+<tr><td>2019-04-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1545373'>Convert enum to enum class for internal::MergeType</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1545372'>Convert enum to enum class for ScrollBarButton::Type</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1543057'>Remove ViewModelUtils::Alignment enum</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-03-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1530504'>Remove SchedulePaintType enum</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-03-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1532123'>PaymentRequest: Correct a behavior of updateWith()</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-03-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1535682'>Fix duplicate sampling of image pixels in dark mode.</a></td><td>v.paturi</td></tr>
+<tr><td>2019-03-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1530277'>Convert enum to enum class for MouseEventType</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1534902'>Clean up unused enum values in MenuAnchorPosition</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1529505'>Put CSSPendingSubstitutionValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2019-03-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1513797'>PaymentRequest: Implement error message for retry() on desktop</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-03-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1531935'>IndexedDB: Specify in-memory or not for IndexedDBBackingStore</a></td><td>Xunran Ding</td></tr>
+<tr><td>2019-03-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1530508'>Convert enum to enum class for MenuAnchorPosition</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-03-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1513796'>Remove blink::NetworkHintsInterface</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-03-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1514437'>Add support for classification of image sprites in dark mode.</a></td><td>v.paturi</td></tr>
 <tr><td>2019-03-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1524751'>Put CSSURIValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
