--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-08-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1735447'>Convert enum to enum class for MaximumFlexSizeRule</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-08-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1714385'>Geometry: DOMQuad bounds should be updated when its points are changed</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/586092'>Add codes for preventing memory leak in sandbox</a></td><td>DongJun Kim</td></tr>
 <tr><td>2019-07-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1725132'>Remove unused method in AdsPageLoadMetricsObserver Class</a></td><td>Synthia Islam</td></tr>
 <tr><td>2019-07-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1724640'>Add UseCounter for "overflow: overlay"</a></td><td>Md. Hasanur Rashid</td></tr>
