--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-08-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1600387'>Change enumerator names like constants for DwmFrameState</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1730516'>Add UseCounter kCSSValueOverflowOverlay</a></td><td>Md. Hasanur Rashid</td></tr>
 <tr><td>2019-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1730150'>Implement RRectFBuilder to build RRectF</a></td><td>Md. Hasanur Rashid</td></tr>
 <tr><td>2019-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1567711'>Replace Platform::Current() with TestingPlatformSupport to call GetURLLoaderMockFactory.</a></td><td>DongJun Kim</td></tr>
