--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-08-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1757406'>Reland "Add comment at the top of auto generated files"</a></td><td>Synthia Islam</td></tr>
 <tr><td>2019-08-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1602452'>Classify SVG images for dark mode.</a></td><td>v.paturi</td></tr>
 <tr><td>2019-08-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1767292'>Convert enum to enum class for Wigdet::FrameType</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-08-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1765090'>Remove is_blacklisted parameter of SendFillInformationToRenderer</a></td><td>Hwanseung Lee</td></tr>
