--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-08-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1745122'>Replace Platform::Current() with url_test_helpers to call GetURLLoaderMockFactory.</a></td><td>DongJun Kim</td></tr>
 <tr><td>2019-08-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1715465'>Canvas2D: Remove IsInifinityOrNaN() and use !std::isfinite() instead</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-08-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1757406'>Reland "Add comment at the top of auto generated files"</a></td><td>Synthia Islam</td></tr>
 <tr><td>2019-08-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1602452'>Classify SVG images for dark mode.</a></td><td>v.paturi</td></tr>
