--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1784309'>Use |dest_rect| size for checking image size threshold.</a></td><td>v.paturi</td></tr>
 <tr><td>2019-09-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1772925'>Remove image's min size dependence on blocks count in dark mode.</a></td><td>v.paturi</td></tr>
 <tr><td>2019-09-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1753986'>[Native File System] Don't allow "save file" dialogs when site setting is block</a></td><td>Synthia Islam</td></tr>
 <tr><td>2019-09-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1782202'>Jumbo: Fix a build error on Android</a></td><td>Jinho Bang</td></tr>
