--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1806616'>Fix up a crash relied on LineBreaker</a></td><td>hyunjune</td></tr>
 <tr><td>2019-09-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1821500'>Removing unused ClientToServerResponse member and</a></td><td>Imranur Rahman</td></tr>
 <tr><td>2019-09-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1816253'>CSS: Initial value for quotes should be auto</a></td><td>Synthia Islam</td></tr>
 <tr><td>2019-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1810173'>Convert enum to enum class for NotifyAction</a></td><td>Hwanseung Lee</td></tr>
