--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-10-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1824052'>Convert enum to enum class for PaintButtonMode</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-09-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1817862'>Cookie exclusion and flagging event be logged in NetLog</a></td><td>Imam Mohammad Bokhary</td></tr>
 <tr><td>2019-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1824733'>Fixup typo on the comment</a></td><td>hyunjune</td></tr>
 <tr><td>2019-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1806616'>Fix up a crash relied on LineBreaker</a></td><td>hyunjune</td></tr>
