--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-10-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1844913'>Convert enum to enum class for Button::KeyClickAction</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-10-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1844526'>WebGPU: GPUVertexBufferDescriptor.stride member should be GPUBufferSize</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-10-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1843791'>WebGPU: Rename PipelineStageDescriptor to ProgrammableStageDescriptor</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1824051'>Skip classification of images with css filters in dark mode.</a></td><td>v.paturi</td></tr>
