--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1860734'>[PaymentRequest]Add PaymentRequestPaymentApp test case for user cancel through payment sheet</a></td><td>Synthia</td></tr>
 <tr><td>2019-10-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1868535'>Convert enum to enum class for InitParams::ShadowType</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-10-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1858542'>Rename storage/browser/fileapi to file_system</a></td><td>DongJun Kim</td></tr>
 <tr><td>2019-10-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1845132'>Reland "WebGPU: Add GPUProgrammablePassEncoder interface"</a></td><td>Jinho Bang</td></tr>
