--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1893111'>Do not invert the colors of SVG shapes in dark mode.</a></td><td>v.paturi</td></tr>
 <tr><td>2019-11-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1898891'>WebGPU: Should reject with an OperationError if GPUDevice is lost</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1891815'>Remove unused text_direction_ variable</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-10-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1880781'>Merge PasswordManagerClientHelperDelegate into PasswordManagerClient</a></td><td>DongJun Kim</td></tr>
