--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-11-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1919532'>WebGPU: GPUVertexAttributeDescriptor.offset should be `required`</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-11-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1919531'>WebGPU: Change .getQueue() to .defaultQueue</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1911882'>Renaming SERVICE_NOT_CONNECTED to INVALID_ANSWER_MESSAGE.</a></td><td>Abul Hasan Md Osama</td></tr>
 <tr><td>2019-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1893111'>Do not invert the colors of SVG shapes in dark mode.</a></td><td>v.paturi</td></tr>
 <tr><td>2019-11-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1898891'>WebGPU: Should reject with an OperationError if GPUDevice is lost</a></td><td>Jinho Bang</td></tr>
