--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2019-11-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1911881'>Removing redundant comments and extern variable of Cleaning up RecurrentInterstitialFeature flag.</a></td><td>Abul Hasan Md Osama</td></tr>
 <tr><td>2019-11-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1919532'>WebGPU: GPUVertexAttributeDescriptor.offset should be `required`</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-11-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1919531'>WebGPU: Change .getQueue() to .defaultQueue</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1911882'>Renaming SERVICE_NOT_CONNECTED to INVALID_ANSWER_MESSAGE.</a></td><td>Abul Hasan Md Osama</td></tr>
